Fix spacing around embedded lists

--- a/style.css
+++ b/style.css
@@ -2275,11 +2275,6 @@ ul.iac24-ctas a:after {
   padding-top: 16px;
 }
 
-.wp-block-button a:hover,
-.wp-block-button a:focus {
-	color: var(--color-almostblack);
-}
-
 /**
  * Jump links and utility buttons
  */
@@ -3332,6 +3327,11 @@ ul {
 	padding: 0;
 }
 
+li > ul,
+li > ol {
+	margin-top: 0;
+}
+
 hr {
 	border-top: 0.25rem var(--color-almostblack) solid;
 	color: var(--color-almostblack);
@@ -3694,6 +3694,11 @@ input:focus[type="submit"],
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button {
 	display: none;
+}
+
+.wp-block-button a:hover,
+.wp-block-button a:focus {
+	color: var(--color-white);
 }
 
 /* Tables
@@ -5365,11 +5370,6 @@ ul.iac24-ctas a:after {
 
 .wp-block-button a {
   padding-top: 16px;
-}
-
-.wp-block-button a:hover,
-.wp-block-button a:focus {
-	color: var(--color-almostblack);
 }
 
 /**
